Clean up BgpPeerBean
Use local variable type inference and initialize fields as soon as
possible to make things a tad clearer.

JIRA: BGPCEP-1071
Change-Id: Ieff1d7171c8f7f3121b37658d5f4b866c71b2730
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>